타임라인 글 삭제 페이지 만들기

--- a/app/views/wall/posts.html.erb
+++ b/app/views/wall/posts.html.erb
@@ -4,7 +4,7 @@
 	<div style="background-color: #ffffff; width: 400px; border: 2px solid #d3d6db; padding: 10px; word-break: break-all;">
 		<h3 style="color: blue;"><%= post.name %></h3>
 		<p><%= post.content %></p>
-		<p style="font-size: 90%; text-align: right;"><a href="/wall/edit/<%= post.id %>">edit</a></p>
+		<p style="font-size: 90%; text-align: right;"><a href="/wall/edit/<%= post.id %>">edit</a> <a href="/wall/delete/<%= post.id %>">delete</a></p>
 	</div><br>
 	<% end %>
 	<a href="/wall/write">Write post again</a>
